# optionsminer

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  compose.yaml  dt15_methodology.md  pyproject.toml
.streamlit/: config.toml
docs/: dt15_methodology.md
scripts/: sigma_r1_stability_check.py
src/optionsminer/: __init__.py  cli.py  config.py  scheduler.py
src/optionsminer/analytics/: compute.py  dt15.py  gex.py  greeks.py  implied_move.py  loader.py  max_pain.py  pcr.py  skew.py  unusual.py  vrp.py  walls.py
src/optionsminer/providers/: base.py  ingest.py  yahoo.py
src/optionsminer/storage/: db.py  disk_guard.py  dt15_storage.py  models.py
src/optionsminer/ui/: app.py  common.py
src/optionsminer/ui/pages/: 0_Guide.py  1_GEX_profile.py  2_IV_skew.py  3_Walls_and_Max_Pain.py  4_Unusual_Activity.py  5_History.py  6_Admin.py  7_DT15_Levels.py  8_DT15_Backtest.py
