[project]
name = "optionsminer"
version = "0.1.0"
description = "Self-hosted options analytics dashboard for SPY/SPX — GEX, IV skew, VRP, max pain, unusual activity, and more."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "norsay-investments" }]
dependencies = [
    "streamlit>=1.40",
    "yfinance>=0.2.50",
    "pandas>=2.2",
    "numpy>=2.0",
    "scipy>=1.14",
    "plotly>=5.24",
    "sqlalchemy>=2.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-dateutil>=2.9",
    "apscheduler>=3.10",
    "tenacity>=9.0",
]

[project.scripts]
optionsminer-snapshot = "optionsminer.cli:snapshot"
optionsminer-init-db = "optionsminer.cli:init_db"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/optionsminer"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]
